[gd_scene load_steps=12 format=3 uid="uid://d25827kd1r2xd"]

[ext_resource type="Script" path="res://UI/LabTable/ControlContainer.gd" id="1_7nxly"]
[ext_resource type="PackedScene" uid="uid://qg0hrece07vm" path="res://UI/Layers/GeoLayers/ZoomContainer.tscn" id="1_pndxl"]
[ext_resource type="PackedScene" uid="uid://p6cm0acpl15r" path="res://UI/CustomElements/AutoIconButton.tscn" id="2_r33nv"]
[ext_resource type="Texture2D" uid="uid://dv8p3wjnqamkh" path="res://Resources/Icons/LabTable/m_close.svg" id="3_c23in"]
[ext_resource type="Texture2D" uid="uid://b3rawlygno8yp" path="res://Resources/Icons/LabTable/m_up.svg" id="5_kqb6x"]
[ext_resource type="Texture2D" uid="uid://cpap7jqaridb3" path="res://Resources/Icons/LabTable/m_left.svg" id="6_cplru"]
[ext_resource type="Texture2D" uid="uid://bvruwujtfdrwt" path="res://Resources/Icons/LabTable/m_center.svg" id="7_643fb"]
[ext_resource type="Texture2D" uid="uid://dqa08ihhn17ji" path="res://Resources/Icons/LabTable/m_right.svg" id="8_dkvif"]
[ext_resource type="Texture2D" uid="uid://bcl4dprbho0o2" path="res://Resources/Icons/LabTable/m_down.svg" id="9_wey23"]
[ext_resource type="PackedScene" uid="uid://c80mmsavbpqyk" path="res://Layers/Renderers/GeoLayer/GeoRasterLayerRenderer.tscn" id="9_yl31i"]
[ext_resource type="Script" path="res://UI/LabTable/OverviewCamera.gd" id="10_ksdla"]

[node name="ControlContainer" type="VBoxContainer" node_paths=PackedStringArray("overview_camera", "visibility_button", "zoom_container", "grid_container", "subviewport_container", "left", "right", "up", "down", "center")]
offset_right = 337.0
offset_bottom = 616.0
script = ExtResource("1_7nxly")
overview_camera = NodePath("OverviewContainer/SubViewport/OverviewCamera")
visibility_button = NodePath("HBox/SetVisible")
zoom_container = NodePath("HBox/ZoomContainer")
grid_container = NodePath("GridContainer")
subviewport_container = NodePath("OverviewContainer")
left = NodePath("GridContainer/Left")
right = NodePath("GridContainer/Right")
up = NodePath("GridContainer/Up")
down = NodePath("GridContainer/Down")
center = NodePath("GridContainer/Center")

[node name="Padding" type="Control" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SetVisible" parent="HBox" instance=ExtResource("2_r33nv")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
toggle_mode = true
icon = ExtResource("3_c23in")
icon_folder = "LabTable"
texture_name = "m_close"

[node name="ZoomContainer" parent="HBox" instance=ExtResource("1_pndxl")]
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 3

[node name="Spacer" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Up" parent="GridContainer" instance=ExtResource("2_r33nv")]
clip_contents = false
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
focus_mode = 0
icon = ExtResource("5_kqb6x")
icon_folder = "LabTable"
texture_name = "m_up"
metadata/_edit_pinned_properties_ = [&"clip_contents"]

[node name="Spacer2" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Left" parent="GridContainer" instance=ExtResource("2_r33nv")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
focus_mode = 0
icon = ExtResource("6_cplru")
icon_folder = "LabTable"
texture_name = "m_left"

[node name="Center" parent="GridContainer" instance=ExtResource("2_r33nv")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
focus_mode = 0
icon = ExtResource("7_643fb")
icon_folder = "LabTable"
texture_name = "m_center"

[node name="Right" parent="GridContainer" instance=ExtResource("2_r33nv")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
focus_mode = 0
icon = ExtResource("8_dkvif")
icon_folder = "LabTable"
texture_name = "m_right"

[node name="Spacer4" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Down" parent="GridContainer" instance=ExtResource("2_r33nv")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
focus_mode = 0
icon = ExtResource("9_wey23")
icon_folder = "LabTable"
texture_name = "m_down"

[node name="OverviewContainer" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="OverviewContainer"]
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4294967294
size = Vector2i(300, 300)
render_target_update_mode = 4

[node name="OverviewRenderer" parent="OverviewContainer/SubViewport" instance=ExtResource("9_yl31i")]
visibility_layer = 2

[node name="OverviewCamera" type="Camera2D" parent="OverviewContainer/SubViewport"]
script = ExtResource("10_ksdla")

[node name="ReferenceRect" type="ReferenceRect" parent="OverviewContainer/SubViewport"]
offset_right = 40.0
offset_bottom = 40.0
border_color = Color(1, 0.6, 0.984314, 1)
editor_only = false
